ves-middle/tests/t6_test_return_usage.test
struct S(x) { 
    init { 
        if (false) { return 5; } // error
        return; // ok
    }

    method1(self) { loop { return; } } // ok
    method2(self) => none  // ok
}

fn func1() { return; }
fn func2() => none;

print(fn() { return }); // ok
print(fn() => none); // ok

return; // ok 

do {
    return; // ok 
}

loop { return; } // ok 

%output

error: Cannot return a value from an init block
  ┌─ <source: #1b4abf6267bfd24c>:3:22
  │
3 │         if (false) { return 5; } // error
  │                      ^^^^^^^^
